--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -675,7 +675,7 @@ th {
 }
 
 td {
-  text-align: left;
+  text-align: right;
   padding: 5px 10px;
   border-bottom: 1px solid #434343;
 }
@@ -784,12 +784,12 @@ section {
   max-width: 650px;
   padding: 30px 0px 50px 0px;
   margin: 20px 0;
-  margin-top: 70px;
+  margin-top: 0px;
 }
 section #title {
   border: 0;
   outline: none;
-  margin: 0 0 50px 0;
+  margin: 0 0 0 0;
   padding: 0 0 5px 0;
 }
 section #title h1 {
@@ -806,32 +806,32 @@ section #title p {
   font-size: 18px;
   text-align: center;
 }
-section #title .credits {
+section #credits {
   font-size: 11px;
   font-family: 'OpenSansRegular', "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-weight: normal;
   color: #696969;
   margin-top: -10px;
 }
-section #title .credits.left {
+section #credits.left {
   float: left;
 }
-section #title .credits.right {
+section #credits.right {
   float: right;
 }
 
 @media print, screen and (max-width: 720px) {
-  #title .credits {
+  #credits {
     display: block;
     width: 100%;
     line-height: 30px;
     text-align: center;
   }
-  #title .credits .left {
+  #credits.left {
     float: none;
     display: block;
   }
-  #title .credits .right {
+  #credits.right {
     float: none;
     display: block;
   }
